--- a/player.html
+++ b/player.html
@@ -32,9 +32,8 @@
 			.widget-container {
 				width: 100%;
 				max-width: 420px;
-				background: #ffffff;
+				background: #dadada;
 				border-radius: 24px;
-				box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
 				overflow: hidden;
 				position: relative;
 			}
