--- a/player.html
+++ b/player.html
@@ -384,14 +384,14 @@
 						>
 							Corse
 						</button>
-						<!-- <button
+						<button
 							class="station-btn"
 							data-station="cotedazur"
 							data-server-id="2"
 							data-url="https://manager11.streamradio.fr:1445/stream"
 						>
 							Côte d'Azur
-						</button> -->
+						</button>
 					</div>
 				</div>
 
@@ -486,13 +486,13 @@
 						>
 							Corse
 						</button>
-						<!-- <button
+						<button
 							class="modal-btn"
 							data-station="cotedazur"
 							data-url="https://manager11.streamradio.fr:1445/stream"
 						>
 							Côte d'Azur
-						</button> -->
+						</button>
 					</div>
 				</div>
 			</div>
@@ -605,8 +605,6 @@
 					});
 				});
 
-				// Init: aucune station n'est choisie tant que l'utilisateur n'a pas décidé
-				showWidgetForStation(null);
 				streamSource.src = "";
 
 				// Gestion du bouton Play/Stop
