change taille auto

--- a/player.html
+++ b/player.html
@@ -30,8 +30,9 @@
 			}
 
 			.widget-container {
+				min-width: 400px;
+				max-width: 600px;
 				width: 100%;
-				max-width: 420px;
 				background: #dadada;
 				border-radius: 24px;
 				overflow: hidden;
