--- a/player.html
+++ b/player.html
@@ -30,10 +30,11 @@
 			}
 
 			.widget-container {
-				min-width: 400px;
-				max-width: 600px;
-				width: 100%;
-				background: #dadada;
+				width: 100%; /* Toujours prendre 100% de la largeur disponible */
+				min-width: 250px; /* Largeur minimale pour éviter les réductions excessives */
+				max-width: 400px; /* Largeur maximale ajustée */
+				background: #ffffff;
+				border: #ec3d3d 1px solid;
 				border-radius: 24px;
 				overflow: hidden;
 				position: relative;
